# Template-Flask

./: .dockerignore  .gitignore  .test.env  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  settings.toml
.github/workflows/: install_lint_test.yml
migrations/: env.py
migrations/versions/: efd051590cf6_.py
src/: app.py  config.py  models.py
src/auth/: forms.py  models.py  utils.py
src/auth/blueprints/webui/: __init__.py  views.py
src/blueprints/restapi/: resources.py
src/blueprints/webui/: __init__.py  views.py
src/ext/: admin.py  auth.py  commands.py  configuration.py  debug.py
src/static/js/: app.js
src/templates/: base.html  index.html
src/templates/auth/: login.html  resend_email.html  sigup.html
src/templates/emails/: active.html
src/templates/includes/: footer.html  navbar.html
src/tests/: conftest.py
tests/: conftest.py  factory.py
tests/auth/: test_models.py  test_views.py
