[project]
name = "template-flask"
version = "0.1.0"
description = ""
authors = [{ name = "Marcelo Lino", email = "mdslino@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "Flask>=3.0.3,<4",
    "Flask-Admin>=1.6.0,<2",
    "Flask-Login>=0.6.2,<0.7",
    "flask-mail>=0.10.0,<0.11",
    "Flask-Migrate>=4.0.4,<5",
    "Flask-RESTful>=0.3.10,<0.4",
    "Flask-SQLAlchemy>=3.0.0,<4",
    "Flask-WTF>=1.0.1,<2",
    "gevent>=25.4.2,<26",
    "gunicorn>=23,<24",
    "psycopg2-binary>=2.9.3,<3",
    "pydantic[email]>=2.7.4,<3",
    "sqlalchemy-utils>=0.41.0,<0.42",
    "pydantic-settings>=2.3.3,<3",
]

[dependency-groups]
dev = [
    "Flask-DebugToolbar>=0.15.1,<0.16",
    "flask-shell-ipython>=0.5.1,<0.6",
    "ipdb>=0.13.9,<0.14",
    "python-dotenv>=1.0.0,<2",
    "ruff>=0.11.8",
]
test = [
    "pytest-flask>=1.2.0,<2",
    "pytest-cov>=6.1.1,<7",
    "factory-boy>=3.2.1,<4",
    "pytest-dotenv>=0.5.2,<0.6",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.ruff]
line-length = 79
target-version = "py311"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

preview = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
env_files = [
    ".test.env"
]
